<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">RemoteControl</string>
    <string name="app_title">PhiBoxRemote</string>
    <string name="unable_to_connect_device">Unable to connect TV</string>
    <string name="devices_list">devices list</string>
    <string name="manual_ip_label">Add Phicomm BOX</string>
    <string name="manual_ip_entry_label">IP Address</string>
    <string name="manual_ip_hint">xxx.xxx.xxx.xxx</string>
    <string name="manual_ip_message">You can find IP address of your Phicomm Box device by going to:\nSettings &gt; Network &gt; Network Information</string>
    <string name="manual_ip_error_address">Invalid address.</string>
    <string name="manual_ip_default_box_name">Unknown box</string>
    <string name="manual_ip_connect">Connect</string>
    <string name="manual_ip_cancel">Cancel</string>
    <string name="manual_ip_input">Manual IP</string>
    <string name="choose_box_controll">choose box control</string>
    <string name="recent_connect_devices">connected devices</string>
    <string name="research_discovery_devices">research</string>
    <string name="finder_searching">Searching for Phicomm Box on your network.</string>
    <string name="searching">Searching ...</string>
    <string name="finder_searching_with_ssid">Searching for Phicomm Box on \"%s\" network.</string>
    <string name="finder_wifi_waiting">Waiting for WiFi network.</string>
    <string name="current_wifi">Current Wifi</string>
    <string name="finder_add_other">Add other device</string>
    <string name="finder_connect">Connect</string>
    <string name="finder_cancel">Cancel</string>
    <string name="finder_manual">Add Phicomm TV manually</string>
    <string name="finder_enable">Enable</string>
    <string name="finder_configure">Configure</string>
    <string name="finder_wait">Wait</string>
    <string name="finder_no_devices">No Phicomm Box found</string>
    <string name="finder_no_devices_with_ssid">No Phicomm Box found on \"%s\"</string>
    <string name="finder_wifi_not_available">WiFi network not available</string>
    <string name="finder_recently_connected">Recently connected devices</string>
    <string name="edit_recent_connect_devices">edit</string>
    <string name="cancel_choose_box">cancel</string>
    <string name="delete_choose_box">delete</string>
    <string name="no_item">no item</string>
    <string name="current_wifi_not_available">Wifi not available</string>
    <string name="connect_fail">connect fail</string>
    <string name="searching_devices">Searching Device</string>
    <string name="device_find_tip">Notice:\n \n
        1:Support Phicomm Box \n
        2:On the same network \n
        3:Restart or ip input \n
    </string>
    <plurals name="NdeviceCount">
        <item quantity="other">Total <xliff:g id="count">%d</xliff:g> devices</item>
    </plurals>
    <plurals name="choose_count_box">
        <item quantity="other">Total <xliff:g id="count">%d</xliff:g>Item</item>
    </plurals>
    <string name="key_up">Up</string>
    <string name="key_down">Down</string>
    <string name="key_right">Right</string>
    <string name="key_left">Left</string>
    <string name="key_enter">Ok</string>
    <string name="key_vol_down">Volume Down</string>
    <string name="key_vol_up">Volume Up</string>
    <string name="key_chanel_down">Chanel Down</string>
    <string name="key_chanel_up">Chanel Up</string>
    <string name="key_menu">Menu</string>
    <string name="key_home">Home</string>
    <string name="key_back">Back</string>
    <string name="vol">vol</string>
    <string name="chanel">chanel</string>
    <string name="exit_application_hint">click again then exit application</string>
    <string name="click_force_hint">please force deep</string>
    <string name="screenshot">Screenshot</string>
    <string name="dlna">DLNA</string>
    <string name="childlock">ChildLock</string>
    <string name="clear">Clean</string>
    <string name="init_time">0:00:00</string>
    <string name="separate"> / </string>
    <string name="success_screenshot">"Screenshot success"</string>
    <string name="fail_screenshot">"Screenshot failed"</string>
    <string name="success_save">"Save success"</string>
    <string name="fail_save">"Save failed"</string>
    <string name="screenshot_title_not_connnect">TV screenshot</string>
    <string name="photo_help_tips">Ple goto&#060;local storage&#062;-&#060;Pictures&#062;-&#060;Phibox&#x000A;Screenshot&#062;check</string>
    <string name="confirm">Confirm</string>
    <string name="tips">Tips</string>
    <string name="tips_content">Initializing the casting devices , please waite.</string>
    <string name="device_search">Looking for the devices , please waite.</string>
    <string name="wifi_connecting">Wifi connecting...</string>
    <string name="wifi_disconnecting">Wifi disconnecting...</string>
    <string name="wifi_not_connected">Wifi disconnected...</string>
    <string name="local_screenprojection">Local ScreenProjection</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="personal_title">Mine</string>
    <string name="personal_appliction">Applications</string>
    <string name="personal_setting">Settings</string>
    <string name="personal_about">About</string>
    <string name="personal_version">Version</string>
    <string name="personal_login">Please login your phicomm account</string>
    <string name="about_project_name">Phi Controller V<xliff:g id="version">%1$s</xliff:g></string>
    <string name="website">Official website:</string>
    <string name="hotline">Service hotline:</string>
    <string name="phicomm_website">www.phicomm.com</string>
    <string name="phicomm_hotline">4007-567-567</string>
    <string name="copyright_info">&#169;2017 Shanghai Fitch Data Communication Technology Co., Ltd</string>
    <string name="dailnumber">Call</string>
    <string name="update_description">New version update</string>
    <string name="version_info_tips">Latest version content update:</string>
    <string name="version_update_title">Find new version(%s)</string>
    <string name="update_current_version">Current version</string>
    <string name="update_latest_version">Latest version</string>
    <string name="update_version">Version update</string>
    <string name="current_version_newest">Current version is the latest</string>
    <string name="download_wait">downloading,pls wait...</string>
    <string name="download_failure">download fail</string>
    <string name="file_not_exist">Installed file not exist</string>
    <string name="update_later">Later to consider</string>
    <string name="update_now">Update now</string>
    <string name="error_no_device">No devices secified</string>
    <string name="timeout_msg">The version is not available, please update！</string>
    <string name="network_invailable_msg">"Unable to connect network"</string>
    <string name="setting_title">Remote control setting</string>
    <string name="setting_vibrate_title">Touch vibrating</string>
    <string name="setting_vibrate_context">Vibrating while click the remote control</string>
    <string name="setting_voice_title">Volume button control</string>
    <string name="setting_voice_context">Control the volume of the box by volume button</string>
    <string name="register">Register</string>
    <string name="new_user_register">New user register</string>
    <string name="register_divide">Register</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="reset_divide">Reset</string>
    <string name="complete">Complete</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="login_divide">Login</string>
    <string name="logout">Logout</string>
    <string name="device">Device</string>
    <string name="my_device">My Devices</string>
    <string name="find">Find</string>
    <string name="messages">Messages</string>
    <string name="personal">Personal</string>
    <string name="personal_center">Personal Center</string>
    <string name="username">Username</string>
    <string name="phonenum_hint">Pls input phonenumber</string>
    <string name="captcha_hint">Pls input captcha</string>
    <string name="verifycode_hint">Pls input verifycode</string>
    <string name="password_hint">Pls input password</string>
    <string name="password_tips">6-18 bit, At least two kinds of numbers, letters and symbols</string>
    <string name="old_password_tips">Input old password:</string>
    <string name="old_password_hint">Pls input old password</string>
    <string name="new_password_tips">input new password:</string>
    <string name="new_password_hint">Pls input new password</string>
    <string name="confirm_new_password_hint">Pls input confirm new password</string>
    <string name="phonenum_is_null">Empty phonenumber.</string>
    <string name="phonenum_is_illegal">Illegal phonenumber</string>
    <string name="password_is_null">Empty password</string>
    <string name="password_format_wrong">Password format wrong</string>
    <string name="password_length_wrong">Password length wrong</string>
    <string name="newpassword_format_wrong">Newpassword format wrong</string>
    <string name="newpassword_length_wrong">Newpassword length wrong</string>
    <string name="being_processed">Requesting</string>
    <string name="loading_default_hint">Loading</string>
    <string name="net_connect_fail">net work connect fail.</string>
    <string name="get_verification_code">Get VerifyCode</string>
    <string name="send_verifycode_success">send verify code success</string>
    <string name="getting_msg_code">getting verify code</string>
    <string name="getting_captcha">getting captcha</string>
    <string name="send_again">resend</string>
    <string name="input_verify_code">pls input verify code</string>
    <string name="input_captcha_code">pls input captcha</string>
    <string name="login_success">Login success</string>
    <string name="reset_success">Modify success</string>
    <string name="read_and_agree_protocal">Read and agree</string>
    <string name="protocal_name">《User protocal》</string>
    <string name="not_read_protocal">Pls read and agree《User protocal》</string>
    <string name="remember_me">Remember me</string>
    <string name="phone_prefix">+86</string>
    <string name="please_login">login</string>
    <string name="login_tips">the number is phicomm account, please log in.</string>
    <string name="exit">exit</string>
    <string name="logout_title">Exit account</string>
    <string name="logout_content">Sure to exit?</string>
    <string name="kick_tips">Your account has been logged on to another device. Please login again and change the password.</string>
    <string name="account_exit">Sure to exist account？</string>
    <string name="account_exit_msg">Data cannot be synchronized after exit account</string>
    <string name="phicomm_account">Phicomm account</string>
    <string name="no_network_layout">no network</string>
    <string name="no_network_reload">reload</string>
    <string name="common_error">request error</string>
    <string name="connect_timeout">connect timeout</string>
    <string name="authorization_error">authorization error</string>
    <string name="verifycode_error">verifycode error</string>
    <string name="verifycode_expire">verifycode expire</string>
    <string name="old_password_error">old password error</string>
    <string name="account_password_not_match">accont and passwrod not match</string>
    <string name="token_invalid">token invalid</string>
    <string name="refresh_token_expire">refresh token expire</string>
    <string name="input_phicomm_device_ip">Input the PHICOMM device ip</string>
    <string name="check_ip_address_setting">Check IP address setting</string>
</resources>