<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginout_core_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/avatar_area"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/old_avatar"
                android:layout_width="95.5dp"
                android:layout_height="95.5dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/phi_icon" />

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/about_project_name"
                android:textColor="@color/white_normal"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_visit_website"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="22dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textColor="@color/core_activity_bg"
                    android:textSize="@dimen/text_size_17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/phicomm_website"
                    android:textColor="@color/device_find_tip_textcolor"
                    android:textSize="@dimen/text_size_17sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dial_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7.5dp"
                android:background="@color/white_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="22dp">

                <TextView
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hotline"
                    android:textColor="@color/core_activity_bg"
                    android:textSize="@dimen/text_size_17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/phicomm_hotline"
                    android:textColor="@color/device_find_tip_textcolor"
                    android:textSize="@dimen/text_size_17sp" />

            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/bottom_copyright" />

    </LinearLayout>

</LinearLayout>